# Agent_Nexus-v2

./: .env  .gitignore  Dockerfile  alembic.ini  api.py  db_setup.py  docker-compose.yaml  docker-compose.yml  import asyncio.py  main.py  prestart.sh  pyproject.toml  requirements-dev.txt  requirements.txt  utils.py
AutoAgent_Hub/: .gitignore  agentic_agent.py  from sqlalchemy import create_engine, Co.py  import requests.py  main.py  tasks.py  utils.py
AutoAgent_Hub/agent_sdk/: planning_agent_core.py
AutoAgent_Hub/api/: routes.py
ChatBuddyPlus/: main.py  tasks.py
ChatBuddyPlus/agent_sdk/: chat_agent_core.py
ChatBuddyPlus/api/: routes.py
InsightMate/: alembic.ini  api.py  db_setup.py  insight_mate_agent.py  main.py  summary_agent.py  tasks.py  worker_local.py.py
InsightMate/agent_sdk/: insight_agent_core.py
InsightMate/api/: routes.py
StudyFlow/: alembic.ini  api.py  dependencies.py  main.py  tasks.py  utils.py
StudyFlow/agent_sdk/: __init__.py  study_agent_core.py
StudyFlow/api/: routes.py
alembic/: env.py
alembic/versions/: 5c01c5f0f1d5_initial_database_schema_for_core_models.py  ab4c266252e1_create_meetings_table.py  ae6d6c36c53c_create_common_mixins_and_update_meeting_.py
common/: __init__.py  config.py  logger.py  memory.py  models.py  setup.py
common/agent_sdk/: __init__.py  agent_core.py  graph_utils.py  orchestration_state.py  protocol_models.py  schemas.py  tools.py
common/agents/: __init__.py  internal_tools.py  llm_provider.py  tools.py
common/db/: __init__.py  (+13 more)
gateway/: main.py
worker/: __init__.py  dramatiq_app.py  tasks.py
(+64 files in other folders)
