[tool.poetry]
name = "agent-nexus-v2"
version = "0.1.0"
description = "The Hive Mind Agent Nexus: StudyFlow, InsightMate, ChatBuddy+, and AutoAgent Hub"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    {include = "common"},
    {include = "StudyFlow"},
    {include = "InsightMate"},
    {include = "ChatBuddyPlus"},
    {include = "AutoAgentHub"}
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = {extras = ["all"], version = "^0.111.0"}
uvicorn = {extras = ["standard"], version = "^0.30.1"}
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
dramatiq = {extras = ["redis"], version = "^1.15.2"}
langchain = "^0.2.1"
langgraph = "^0.0.60"
pydantic = "^2.7.4"
qdrant-client = "1.7.0"

[build-system]
requires = ["poetry-core>=1.5.2"]
build-backend = "poetry.core.masonry.api"
